# test-a2a

./: .env.example  .gitignore  README.md  docker-compose.yml  mock_server.py  pyproject.toml
agents/explainer/: Dockerfile  __init__.py  a2a_server.py  agent.py  agent_card.json  config.py  models.py  pyproject.toml  requirements.txt
agents/explainer/tools/: __init__.py  context7.py
agents/knowledge/: Dockerfile  __init__.py  a2a_server.py  agent.py  agent_card.json  config.py  knowledge_base.py  memory.py  pyproject.toml  requirements.txt
agents/orchestrator/: Dockerfile  __init__.py  a2a_server.py  agent.py  agent_card.json  config.py  orchestrator.py  pyproject.toml  requirements.txt  router.py  streaming.py  synthesizer.py
agents/research/: Dockerfile  __init__.py  a2a_server.py  agent.py  agent_card.json  config.py  pyproject.toml  requirements.txt
agents/research/tools/: __init__.py  firecrawl.py  github.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentCard.jsx  AgentGrid.jsx  AgentWorkflowGraph.jsx  MessageFlow.jsx  QueryInput.jsx  ResponsePanel.jsx  ToolCallsSection.jsx
frontend/src/hooks/: useEventStream.js
shared/: __init__.py  a2a_utils.py  config.py  logging_config.py  models.py  token_manager.py
tests/: __init__.py  test_a2a_utils.py
