[project]
name = "explainer-agent"
version = "0.1.0"
description = "Explainer Agent for Multi-Agent A2A System"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.2.0",
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
]
