[project]
name = "orchestrator-agent"
version = "0.1.0"
description = "Orchestrator Agent for Multi-Agent A2A System"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.2.0",
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
]
